--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "repository": "git@github.com:d-ivanitskiy/angry-discord-bot.git",
   "dependencies": {
     "discord.js": "^14.12.1",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "ts-node": "^10.9.1"
   },
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "ts-node src/Bot.ts",
+    "dev": "nodemon --exec ts-node src/Bot.ts",
     "precommit": "pretty-quick --staged",
     "prepare": "husky install .husky"
   },
