--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "scripts": {
     "start": "ts-node src/Bot.ts",
     "dev": "nodemon --exec ts-node src/Bot.ts",
-    "precommit": "pretty-quick --staged",
-    "prepare": "husky install .husky"
+    "prepare": "husky install"
   },
   "devDependencies": {
-    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
     "nodemon": "^3.0.1",
-    "prettier": "^2.8.0",
-    "pretty-quick": "^3.1.3"
+    "prettier": "3.0.1",
+    "tslint": "^5.20.1",
+    "tslint-config-airbnb": "^5.11.2"
+  },
+  "lint-staged": {
+    "*.{js,css,md}": "prettier --write"
   }
 }
