--- a/package.json
+++ b/package.json
@@ -14,14 +14,11 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.3",
+    "husky": "^8.0.0",
     "nodemon": "^3.0.1",
-    "prettier": "3.0.1",
+    "prettier": "^2.8.8",
+    "pretty-quick": "^3.1.3",
     "tslint": "^5.20.1",
     "tslint-config-airbnb": "^5.11.2"
-  },
-  "lint-staged": {
-    "*.{js,css,md}": "prettier --write"
   }
 }
