--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
+    "node-cron": "^3.0.2",
     "ts-node": "^10.9.1"
   },
   "scripts": {
@@ -14,11 +15,13 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@types/node-cron": "^3.0.9",
     "husky": "^8.0.0",
     "nodemon": "^3.0.1",
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
     "tslint": "^5.20.1",
-    "tslint-config-airbnb": "^5.11.2"
+    "tslint-config-airbnb": "^5.11.2",
+    "typescript": "^3.0.1"
   }
 }
